add create subscription managa group handler and business logic
